Footer and header logo with slogan added for all pages, alignment issue fixed for all pages except assessment.

--- a/src/components/CommonModule/landing.css
+++ b/src/components/CommonModule/landing.css
@@ -26,7 +26,7 @@ a.nav-link.active {
 
 #navbar a {
   color: #fff;
-  margin-right: 18px;
+  /* margin-right: 18px; */
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -179,6 +179,30 @@ div#social-icon {
   align-items: flex-start;
 }
 
+.footer-store-icons {
+  display: flex;
+  justify-content: end;
+}
+img#store-icon {
+  width: 7rem;
+}
+@media screen and (max-width: 768px) {
+  .footer-store-icons {
+    display: flex;
+    justify-content: center;
+  }
+  .footer-store-icons img {
+    margin-left: 0;
+  }
+  .footer-wellnes {
+    text-align: center;
+    font-size: 1rem;
+  }
+  p#download-statement {
+    text-align: center;
+  }
+}
+
 /*
 * Patient home
 */
@@ -213,7 +237,7 @@ div#social-icon {
   bottom: 0;
   width: 100%;
   padding: 10px 0;
-  font-family: 'Avenir', sans-serif;
+  font-family: "Avenir", sans-serif;
   z-index: 1;
 }
 
@@ -651,7 +675,7 @@ div#price-box {
 }
 
 div#price-box:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 100%;
   left: 46%;
