--- a/src/components/Doctor Module/doctor.css
+++ b/src/components/Doctor Module/doctor.css
@@ -240,7 +240,29 @@ div#social-icon {
 #copyright .row {
   align-items: flex-start;
 }
-
+.footer-store-icons {
+  display: flex;
+  justify-content: end;
+}
+img#store-icon {
+  width: 7rem;
+}
+@media screen and (max-width: 768px) {
+  .footer-store-icons {
+    display: flex;
+    justify-content: center;
+  }
+  .footer-store-icons img {
+    margin-left: 0;
+  }
+  .footer-wellnes {
+    text-align: center;
+    font-size: 1rem;
+  }
+  p#download-statement {
+    text-align: center;
+  }
+}
 /*
 * Patient home
 */
